--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,7 @@ classifiers = [
     "Operating System :: OS Independent",
     "License :: OSI Approved :: MIT License",
 ]
+dependencies = [
+    "pandas>=2.0.3",
+    "pytest>=8.3.5",
+]
